--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,11 +19,22 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
-
+  flutter_signin_button: ^1.0.0
+  intl: ^0.16.1
+  intl_translation: ^0.17.9
+  firebase_core: ^0.4.4+2
+  firebase_auth: ^0.15.5+2
+  google_sign_in: ^4.1.4
+  animations: ^1.0.0+5
+  flare_flutter: ^2.0.1
+  fluttertoast: ^3.1.3
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -40,10 +51,10 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
-  # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/ic_launcher.png
+    - assets/mailsent.flr
+    - assets/MultiOptionButton.flr
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
