--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   google_sign_in: ^4.1.4
   animations: ^1.0.0+5
   flare_flutter: ^2.0.1
+  barcode_scan: ^2.0.1
   fluttertoast: ^3.1.3
   
 dev_dependencies:
